[tool.poetry]
name = "altair-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
altair = "^4.1.0"
jupyter = "^1.0.0"
vega-datasets = "^0.9.0"
nbconvert = "^6.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
